# autoclicker.exe

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
icon/: png2ico.bat
src/: main.rs  main.rs_old
