[package]
name = "autoclicker"
version = "0.1.1"
edition = "2021"

[dependencies]
enigo = { version = "0.6", features = ["serde"] }  # serde optional but useful
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
# lto = true         # Enable Link-Time Optimization
# codegen-units = 1  # Helps LTO optimize more effectively
# strip = true       # Automatically strip symbols from the binary.
# panic = 'abort'    # or 'unwind' for safe memory cleanup
