[package]
name = "autoclicker"
version = "0.1.3"
edition = "2021"

[dependencies]
enigo = { version = "0.1.3", features = ["serde"] }  #  compatible with Win 7, use rust 1.75
# enigo = { version = "0.6", features = ["serde"] }  # for newer API version (uncompatible with Win 7)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
opt-level = 3
lto = true         # Enable Link-Time Optimization
codegen-units = 1  # Helps LTO optimize more effectively
strip = true       # Automatically strip symbols from the binary.
# panic = 'abort'    # or 'unwind' for safe memory cleanup


[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "autoclicker.exe"
LegalCopyright = "konung_yaropolk © 2026"
FileDescription = "Simple autoclicker tool For legacy software automation, game cheating, etc"
ProductName = "Autoclicker"
ProductVersion = "0.1.3"





# place this into: .cargo/config.toml
# to enable whole static linking

#[toolchain]
#channel = "1.75"
#targets = ["x86_64-pc-windows-gnu"]

#[build]
#rustflags = ["-C", "target-feature=+crt-static"]

#[target.x86_64-pc-windows-gnu]
#rustflags = ["-C", "target-feature=+crt-static"]
#linker = "C:\\msys64\\mingw64\\bin\\clang.exe"
#ar = "C:\\msys64\\mingw64\\bin\\llvm-ar.exe"

#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static"]

