[package]
name = "autoclicker"
version = "0.1.9"
edition = "2021"

[dependencies]
enigo = { version = "0.1.3", features = ["serde"] }  # compatible with Win 7, use rust 1.75
# enigo = { version = "0.6", features = ["serde"] }  # for newer API version (uncompatible with Win 7)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true         # Enable Link-Time Optimization
codegen-units = 1  # Helps LTO optimize more effectively
strip = true       # Automatically strip symbols from the binary.
# panic = 'abort'    # or 'unwind' for safe memory cleanup

[package.metadata.winres]
OriginalFilename = "autoclicker.exe"
LegalCopyright = "konung_yaropolk © 2026"
FileDescription = "Scripted Autoclicker Tool"
ProductName = "Autoclicker"
ProductVersion = "0.1.9"
